<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BTTest</string>
    <string name="action_settings">Settings</string>
    <string name="connect_button_label">connect</string>
    <string name="select_button_label">select</string>
    <string name="search_button_label">search</string>
    <string name="send_button_label">send</string>
    <string name="default_selected_dev_name">(device not selected)</string>
    <string name="default_selected_dev_addr"></string>

</resources>
