<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/selected_dev_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_selected_dev_name"
        android:padding="5dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/selected_dev_addr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_selected_dev_addr"
        android:gravity="right"
        android:textSize="14sp" />
    
    <Button
        android:id="@+id/select_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_button_label" />

    <Button
        android:id="@+id/connect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_button_label" />
    
     <Button
        android:id="@+id/disconnect_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_button_label" />
    
    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button android:id="@+id/send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_button_label"/>

</LinearLayout>